# videopred

./: .gitignore  README.md  pyproject.toml
scripts/: generate_result.py  show_pic.py  train.py
src/videopred/: __init__.py  dataset.py
src/videopred/model/: motion_encoder.py  wrap_model.py
