# /data1/sijiaqi/instructpix2pix/pyproject.toml
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videopred"
version = "0.1.0"
description = "Video-conditioned components for InstructPix2Pix"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.1",
  "accelerate>=0.23",
  "diffusers>=0.24",
  "transformers>=4.37",
  "peft>=0.7",
  "tqdm>=4.66",
  "safetensors>=0.4",
  "numpy>=1.24",
  "h5py",
  "matplotlib"
]

[project.optional-dependencies]
train = [
  "xformers>=0.0.23",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["videopred*"]